bibtex de artigos

--- a/bib.bib
+++ b/bib.bib
@@ -1,1 +1,304 @@
+@article{berg1999,
+  title={Models for warehouse management: Classification and examples},
+  author={Van den Berg, Jeroen P and Zijm, Willem HM},
+  journal={International journal of production economics},
+  volume={59},
+  number={1-3},
+  pages={519--528},
+  year={1999},
+  publisher={Elsevier}
+}
+@inproceedings{ajol2018,
+  title={Minimizing Warehouse Operation Cost},
+  author={Ajol, Tracy Adeline and Gran, Shirley Sinatra and Ali, Awang Nasrizal Awang},
+  booktitle={Proceedings of the Second International Conference on the Future of ASEAN (ICoFA) 2017--Volume 2},
+  pages={625--634},
+  year={2018},
+  organization={Springer}
+}
+@article{altarazi2018,
+  title={Concurrent manual-order-picking warehouse design: a simulation-based design of experiments approach},
+  author={Altarazi, Safwan A and Ammouri, Maysa M},
+  journal={International Journal of Production Research},
+  volume={56},
+  number={23},
+  pages={7103--7121},
+  year={2018},
+  publisher={Taylor \& Francis}
+}
 
+@article{camacho2011,
+  title={Warehouse Logistics and Internal Distribution Optimization},
+  author={Camacho, Maria Victoria},
+  journal={Instituto Superior Tecnico. Universidade Tecnica de Lisboa},
+  year={2011}
+}
+
+@article{caridade2017,
+  title={Analysis and optimisation of a logistic warehouse in the automotive industry},
+  author={Caridade, R and Pereira, T and Ferreira, L Pinto and Silva, FJG},
+  journal={Procedia Manufacturing},
+  volume={13},
+  pages={1096--1103},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{chiang2011,
+  title={The adaptive approach for storage assignment by mining data of warehouse management system for distribution centres},
+  author={Chiang, David Ming-Huang and Lin, Chia-Ping and Chen, Mu-Chen},
+  journal={Enterprise Information Systems},
+  volume={5},
+  number={2},
+  pages={219--234},
+  year={2011},
+  publisher={Taylor \& Francis}
+}
+
+
+@article{cormier1992,
+  title={A review of warehouse models},
+  author={Cormier, Gilles and Gunn, Eldon A},
+  journal={European Journal of Operational Research},
+  volume={58},
+  number={1},
+  pages={3--13},
+  year={1992},
+  publisher={Elsevier}
+}
+
+@inproceedings{dharmapriya2011new,
+  title={New strategy for warehouse optimization--lean warehousing},
+  author={Dharmapriya, USS and Kulatunga, AK},
+  booktitle={Proceedings of the 2011 International Conference on Industrial Engineering and Operations Management},
+  pages={513--519},
+  year={2011}
+}
+@article{fumi2013,
+  title={Minimizing warehouse space with a dedicated storage policy},
+  author={Fumi, Andrea and Scarabotti, Laura and Schiraldi, Massimiliano M},
+  journal={International Journal of Engineering Business Management},
+  volume={5},
+  pages={21},
+  year={2013},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@article{van2021,
+  title={Design of a reference architecture for developing smart warehouses in industry 4.0},
+  author={van Geest, Maarten and Tekinerdogan, Bedir and Catal, Cagatay},
+  journal={Computers in Industry},
+  volume={124},
+  pages={103343},
+  year={2021},
+  publisher={Elsevier}
+}
+@article{ashayeri1985,
+  title={Warehouse design optimization},
+  author={Ashayeri, Jalal and Gelders, LF},
+  journal={European Journal of Operational Research},
+  volume={21},
+  number={3},
+  pages={285--294},
+  year={1985},
+  publisher={Elsevier}
+}
+
+@article{gue2012,
+  title={A unit-load warehouse with multiple pickup and deposit points and non-traditional aisles},
+  author={Gue, Kevin R and Ivanovi{\'c}, Goran and Meller, Russell D},
+  journal={Transportation Research Part E: Logistics and Transportation Review},
+  volume={48},
+  number={4},
+  pages={795--806},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@inproceedings{aly2009,
+  title={Order-picking path optimization with multiple picks per route using pallet stackability concept in a warehouse},
+  author={Aly, Ahmed Hassan and Ferrell, William},
+  booktitle={Proceedings of the 2009 Industrial Engineering Research Conference},
+  pages={585--590},
+  year={2009}
+}
+
+@article{heragu2005,
+  title={Mathematical model for warehouse design and product allocation},
+  author={Heragu*, Sunderesh S and Du, L and Mantel, Ronald J and Schuur, Peter C},
+  journal={International Journal of Production Research},
+  volume={43},
+  number={2},
+  pages={327--338},
+  year={2005},
+  publisher={Taylor \& Francis}
+}
+
+@article{karasek2013,
+  title={An overview of warehouse optimization},
+  author={Kar{\'a}sek, Jan},
+  journal={International journal of advances in telecommunications, electrotechnics, signals and systems},
+  volume={2},
+  number={3},
+  pages={111--117},
+  year={2013}
+}
+
+@article{knoll2016,
+  title={Predicting future inbound logistics processes using machine learning},
+  author={Knoll, Dino and Pr{\"u}glmeier, Marco and Reinhart, Gunther},
+  journal={Procedia CIRP},
+  volume={52},
+  pages={145--150},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{kovacs2011,
+  title={Optimizing the storage assignment in a warehouse served by milkrun logistics},
+  author={Kov{\'a}cs, Andr{\'a}s},
+  journal={International Journal of Production Economics},
+  volume={133},
+  number={1},
+  pages={312--318},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{lerher2013,
+  title={MULTI-OBJECTIVE OPTIMIZATION OF AUTOMATED STORAGE AND RETRIEVAL SYSTEMS.},
+  author={Lerher, Tone and {\v{S}}raml, Matja{\v{z}} and Borovin{\v{s}}ek, Matej and Potr{\v{c}}, Iztok},
+  journal={Annals of the Faculty of Engineering Hunedoara-International Journal of Engineering},
+  volume={11},
+  number={1},
+  year={2013}
+}
+
+@article{moeller2011,
+  title={Increasing warehouse order picking performance by sequence optimization},
+  author={Moeller, Klaus},
+  journal={Procedia-Social and Behavioral Sciences},
+  volume={20},
+  pages={177--185},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@inproceedings{queirolo2002,
+  title={Warehouse layout design: minimizing travel time with a genetic and simulative approach—methodology and case study},
+  author={Queirolo, Filippo and Tonelli, Flavio and Schenone, Maurizio and Nan, Paolo and Zunino, Ivan and Savona, SACS},
+  booktitle={Proceedings 14th European Simulation Symposium},
+  pages={1--5},
+  year={2002}
+}
+
+@article{onut2008,
+  title={A particle swarm optimization algorithm for the multiple-level warehouse layout design problem},
+  author={{\"O}n{\"u}t, Semih and Tuzkaya, Umut R and Do{\u{g}}a{\c{c}}, Bilgehan},
+  journal={Computers \& Industrial Engineering},
+  volume={54},
+  number={4},
+  pages={783--799},
+  year={2008},
+  publisher={Elsevier}
+}
+@article{pandian2019,
+  title={Artificial intelligence application in smart warehousing environment for automated logistics},
+  author={Pandian, A Pasumpon},
+  journal={Journal of Artificial Intelligence},
+  volume={1},
+  number={02},
+  pages={63--72},
+  year={2019}
+}
+
+@article{pan2014,
+  title={A travel time estimation model for a high-level picker-to-part system with class-based storage policies},
+  author={Pan, Jason Chao-Hsien and Wu, Ming-Hung and Chang, Wen-Liang},
+  journal={European Journal of Operational Research},
+  volume={237},
+  number={3},
+  pages={1054--1066},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{pang2017,
+  title={Data mining-based algorithm for storage location assignment in a randomised warehouse},
+  author={Pang, King-Wah and Chan, Hau-Ling},
+  journal={International Journal of Production Research},
+  volume={55},
+  number={14},
+  pages={4035--4052},
+  year={2017},
+  publisher={Taylor \& Francis}
+}
+
+@article{pazour2015,
+  title={Warehouse reshuffling: Insights and optimization},
+  author={Pazour, Jennifer A and Carlo, H{\'e}ctor J},
+  journal={Transportation Research Part E: Logistics and Transportation Review},
+  volume={73},
+  pages={207--226},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{pereira2019,
+  title={Localization system for optimization of picking in a manual warehouse},
+  author={Pereira, Maria Teresa and Sousa, JMC and Ferreira, Lu{\'\i}s Pinto and S{\'a}, Jos{\'e} Carlos and Silva, FJG},
+  journal={Procedia Manufacturing},
+  volume={38},
+  pages={1220--1227},
+  year={2019},
+  publisher={Elsevier}
+}
+@article{poulos2001,
+  title={A Pareto-optimal genetic algorithm for warehouse multi-objective optimization},
+  author={Poulos, PN and Rigatos, GG and Tzafestas, SG and Koukos, AK},
+  journal={Engineering Applications of Artificial Intelligence},
+  volume={14},
+  number={6},
+  pages={737--749},
+  year={2001},
+  publisher={Elsevier}
+}
+
+@article{roodbergen2001,
+  title={Routing methods for warehouses with multiple cross aisles},
+  author={Roodbergen, Kees Jan and Koster, Ren{\'E}de},
+  journal={International Journal of Production Research},
+  volume={39},
+  number={9},
+  pages={1865--1883},
+  year={2001},
+  publisher={Taylor \& Francis}
+}
+@inproceedings{sanei2011,
+  title={A heuristic algorithm for the warehouse space assignment problem considering operational constraints: with application in a case study},
+  author={Sanei, O and Nasiri, V and Marjani, MR and Moattar Husseini, SM},
+  booktitle={2011 International Conference on Industrial Engineering and Operations Management, Kuala Lumpur, Malaysia},
+  year={2011}
+}
+
+@article{stopka2018,
+  title={Optimization of warehouse management in the specific assembly and distribution company: A case study},
+  author={Stopka, Ondrej and L'upt{\'a}k, Vladim{\'\i}r},
+  journal={NA{\v{S}}E MORE: znanstveni {\v{c}}asopis za more i pomorstvo},
+  volume={65},
+  number={4 Special issue},
+  pages={266--269},
+  year={2018},
+  publisher={Sveu{\v{c}}ili{\v{s}}te u Dubrovniku}
+}
+
+@article{walter2013,
+  title={The discrete forward--reserve problem--Allocating space, selecting products, and area sizing in forward order picking},
+  author={Walter, Rico and Boysen, Nils and Scholl, Armin},
+  journal={European journal of operational research},
+  volume={229},
+  number={3},
+  pages={585--594},
+  year={2013},
+  publisher={Elsevier}
+}
